--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
 
 <div id="pageHeader">
     <div class="container">
-        <h1>HomeFinder</h1>
+        <h1>HomeFinder_demo</h1>
 
         <h2>北京</h2>
     </div>
