--- a/views/index.html
+++ b/views/index.html
@@ -79,6 +79,7 @@
 <script type="text/javascript">
     var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
     document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F59df2806844f63df2dca6881f0f4b7a1' type='text/javascript'%3E%3C/script%3E"));
+    console.log(map.getBounds());
 </script>
 </body>
 </html>
