add gridline display

--- a/views/index.html
+++ b/views/index.html
@@ -36,6 +36,8 @@
             <div class="pull-right">
                 <span class="btn" id="toggleBtn">展开/收起</span>
                 <span class="btn" id="chgMode">列表/地图</span>
+                <span class="btn" id="toggleGridline">网格开关</span>
+                <span id="gridCoordinate"></span>
             </div>
         </div>
     </div>
